--- a/template.html
+++ b/template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <title>Lannysport</title>
   <style type="text/css">
     h1, h2, h3 {
