--- a/template.html
+++ b/template.html
@@ -2,7 +2,10 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Lannysport</title>
+  $if(title)$
+    <title>$title$</title>
+  $endif$
+
   <style type="text/css">
     h1, h2, h3 {
       line-height: 1.2;
