--- a/template.html
+++ b/template.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <meta id="viewport" name="viewport" content ="width=device-width" />
+
   $if(title)$
     <title>$title$</title>
   $endif$
@@ -17,6 +19,12 @@
       font-size: 18px;
       color: #444;
       padding: 0 10px;
+    }
+
+    @media only screen and (max-width: 768px) {
+      body {
+        max-width: 100%;
+      }
     }
   </style>
 </head>
